# difw

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  example.ipynb  main.py  requirements.txt  setup.cfg  setup.py  setup_old.py  ucr_hyperparameters.csv
.github/workflows/: main.yml
cpab/: __init__.py  cpab.py  main.py  setup.py
cpab/backend/numpy/: functions.py  interpolation.py  transformer.py
cpab/backend/pytorch/: functions.py  interpolation.py  transformer.cpp  transformer.py  transformer_cuda.cpp  transformer_cuda.cu  transformer_slow.py
cpab/core/: __init__.py  cpab.cpp  cpab.h  cpab_ops.cpp  cpab_ops.cu  cpab_ops.cuh  cpab_ops.h  tessellation.py  utility.py
cpab/cpab/: __init__.py  cpab.py
cpab/cpab/backend/numpy/: functions.py  interpolation.py  transformer.py
cpab/cpab/backend/pytorch/: functions.py  interpolation.py  transformer.cpp  transformer.py  transformer_slow.py
cpab/cpab/core/: __init__.py  cpab.cpp  cpab.h  tesselation.py  utility.py
difw/: __init__.py  cpab.py
difw/backend/numpy/: functions.py
difw/backend/pytorch/: transformer.cpp  transformer.py  transformer_cuda.cpp  transformer_cuda.cu  transformer_slow.py
difw/core/: cpab_ops.cpp  cpab_ops.cu  utility.py
docs/: requirements.txt
docs/source/: api.rst  authors.rst  changelog.rst  citing.rst  conf.py  contents.rst  example.nblink  index.rst
docs/source/cpab/: cpab.rst  tessellation.rst
docs/source/cpab/backend/: numpy.rst  pytorch.rst
docs/source/difw/: backend.rst  cpab.rst  tessellation.rst
tests/: basis.py  benchmark.py  expressivity.py  tests.py  tests_scaling_squaring.py
(+2 files in other folders)
