[metadata]
name = cpab
version = attr: cpab.__version__
url = https://github.com/imartinezl/cpab
project_urls = 
    Bug Reports = https://github.com/imartinezl/cpab/issues
    Documentation = https://cpab.readthedocs.io
    Source Code = https://github.com/imartinezl/cpab
author = Iñigo Martinez
author_email = inigomlap@gmail.com
maintainer = Iñigo Martinez
maintainer_email = inigomlap@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Environment :: GPU :: NVIDIA CUDA
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT license
description = CPAB Transformations: finite-dimensional spaces of simple, fast, and highly-expressive diffeomorphisms derived from parametric, continuously-defined, velocity fields in Numpy and Pytorch
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
keywords = diffeomorphisms, tessellations, transformations, continuous piecewise-affine, velocity fields


[options]
zip_safe = False
packages = find:
install_requires = 
    numpy >= 1.20
    matplotlib >= 3.4.0
    torch >= 1.8.0
    scipy
    ninja
include_package_data = False
python_requires = >=3.6, < 4

[options.packages.find]
exclude = tests